@@ -1,3 +1,8 @@
+2006-02-10  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scm/output-svg.scm: Document diversion from GNU coding standards
+	as a workaround for a bug in Microsoft Internet Explorer.
+
 2006-02-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* Documentation/user/changing-defaults.itely (Module): add menu entry.
